[package]
name = "bedwrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
ndarray = { version = "0.15.4"}
ndarray-rand = "0.14.0"
dpc-pariter = "0.2.1"

[dev-dependencies]
temp_testdir = "0.2.3"
